MDEV-26767 Server crashes when rename table and alter storage engine

Wrong assertion leftover removed. m_sql_cmd can be allocated by any
ALTER subcommand and before allocation it is checked for NULL first.